# verifiable-stf

./: .gitignore  Cargo.toml  README.md  justfile
docs/: ir-trace-benchmark.md  lean-ir-interpreter-diff.md  problem.md  trace-optimization-report.md
guest/: Guest.lean  IrDump.lean  lakefile.toml
guest/Guest/: Eth2.lean
guest/Guest/Eth2/: Constants.lean  Containers.lean  Crypto.lean  Helpers.lean  Serialize.lean  Types.lean
guest/Guest/Eth2/Containers/: Block.lean  Misc.lean  Operations.lean  State.lean  Validator.lean
guest/Guest/Eth2/Transition/: Block.lean  Epoch.lean  StateTransition.lean
guest/Guest/Eth2/Transition/Block/: Eth1Data.lean  ExecutionPayload.lean  Header.lean  Operations.lean  Randao.lean  SyncAggregate.lean  Withdrawals.lean
guest/Guest/Eth2/Transition/Epoch/: EffectiveBalances.lean  HistoricalSummaries.lean  InactivityUpdates.lean  Justification.lean  RegistryUpdates.lean  (+5 more)
host/: Cargo.toml
host/src/: main.rs
ir-trace-common/: Cargo.toml
ir-trace-common/src/: lib.rs  primitives.rs  trace_types.rs  value.rs
methods/: Cargo.toml
methods/guest-ir-trace/: Cargo.toml
methods/guest-ir-trace/src/: main.rs  verifier.rs
spike/: FINDINGS.md  FINDINGS_ja.md
spike/abi/: lake-manifest.json  lakefile.toml
spike/abi/src/: AbiSpike.lean
spike/trivial/: lake-manifest.json  lakefile.toml
spike/trivial/src/: Trivial.lean
tools/ir-trace/: Cargo.toml
tools/ir-trace/src/: interpreter.rs  ir_loader.rs  ir_types.rs  main.rs  trace_format.rs
tools/ir-trace/src/interpreter/: eval_expr.rs  exec_body.rs  primitives.rs  stack.rs  value.rs
(+6 files in other folders)
