[package]
name = "guest-ir-trace"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ['std'] }
ir-trace-common = { path = "../../ir-trace-common" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
